<resources>
    <string name="app_name">Eazy Split</string>
    <string name="about_easysplit">About EazySplit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="button_facebook">Sign Up Facebook</string>
    <string name="button_google">Sign Up Google</string>
    <string name="edittext_username">Phone or E-mail</string>
    <string name="edittext_email">E-mail</string>
    <string name="edittext_password">Password</string>
    <string name="edittext_name">Name</string>
    <string name="edittext_birth_date">Birth Date</string>
    <string name="button_login">Log In</string>
    <string name="link_forgotpass">Forgot my password</string>
    <string name="edittext_password_confirmation">Password Confirmation</string>
    <string name="edittext_phone">Cell Phone</string>
    <string name="edittext_zipcode">ZIP Code</string>
    <string name="edittext_address">Address</string>
    <string name="edittext_address_number">Number</string>
    <string name="edittext_address_city">City</string>
    <string name="edittext_address_neighborhood">Neigthborhood</string>
    <string name="edittext_address_complement">Complement</string>
    <string name="edittext_search_restaurant">search restaurant</string>
    <string name="button_search">Search</string>
    <string name="button_save">Save</string>
    <string name="edittext_insert">Insert</string>
    <string name="edittext_address_state">State</string>
    <string name="textview_language">Language</string>
    <string name="textview_launch">LAUNCH: IN DEVELOPMENT</string>
    <string name="text_or">OR</string>
    <string name="text_fill_fields">Fill in the remaining fields</string>
    <string name="text_divergent_passwords">Divergent Passwords</string>
    <string name="text_user_success">User created successfully!</string>
    <string name="text_user_error">Failed to create user</string>
    <string name="text_image_error">Failed to load image</string>
    <string name="text_upload_image_error">Failed to upload image</string>
    <string name="text_select_profile_picture">Select a profile picture</string>
    <string name="link_register">Create New Customer</string>
    <string name="api_service">https://viacep.com.br/</string>
    <string name="button_register">Cadastrar</string>
    <string name="facebook_app_id">491028978093975</string>
    <string name="fb_login_protocol_scheme">fb491028978093975</string>
    <string name="request_id_token">1007881946799-sihkjr6a2d1re0nlnipfg19g2dmsv8cq.apps.googleusercontent.com</string>
    <string name="text_name">EAZY÷SPLIT</string>
    <string name="about_text">IT IS AN APPLICATION FOR DIVIDING ACCOUNTS IN BARS OR RESTAURANTS REGISTERED IN THE
        APPLICATION, YOU MAY INVITE FRIENDS TO A TABLE WHERE EACH ONE CAN MAKE YOUR APPLICATION FOR THE APPLICATION AND
        YOU CAN PAY YOUR PROPERTY ACCOUNT OR DIVIDE RIGHTLY WITH YOUR FRIENDS.
    </string>
    <string name="textview_developer">DEVELOPED BY: EAZYSPLIT 17MOB TEAM</string>
    <string name="textview_version">VERSION 1.0.0</string>
    <string name="textview_owner">PRODUCT OWNER: EAZYSPLIT 17MOB TEAM</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="edittext_cardname">Enter the cardholder\'s name</string>
    <string name="edittext_cpf">Enter the cardholder\'s CPF</string>
    <string name="edittext_cardnumber">Enter the Card Number</string>
    <string name="cvc">cvc</string>
    <string name="etExpiration">Expiration</string>
    <string name="successfull_add_card">Card added or changed successfully</string>
    <string name="image_view_delete_card">Delete Card</string>
    <string name="delete_card_sucessfull">Card deleted successfully!</string>
    <string name="google_maps_key">AIzaSyB8LRvuTpJn62nTG-zZijkiL6YNyU526PU</string>
    <string name="button_edit_customer">Edit</string>
    <string name="button_language">Language</string>
    <string name="button_payment_methods">Payment Method</string>
    <string name="button_exit">Exit</string>
    <string name="button_about">About</string>

</resources>
