<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AboutActivity">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo"
            android:contentDescription="@string/about_easysplit"
            android:id="@+id/ivLogoAbout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="84dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.564"/>
    <TextView
            android:text="@string/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoAbout" app:layout_constraintStart_toStartOf="@+id/ivLogoAbout"
            app:layout_constraintEnd_toEndOf="@+id/ivLogoAbout"/>
    <TextView
            android:text="@string/about_text"
            android:layout_width="368dp"
            android:layout_height="119dp"
            android:id="@+id/tvAboutText"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            android:layout_marginTop="36dp" app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintHorizontal_bias="0.522"/>
    <TextView
            android:text="@string/textview_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDeveloper" app:layout_constraintStart_toStartOf="@+id/tvAboutText"
            app:layout_constraintEnd_toEndOf="@+id/tvAboutText" app:layout_constraintTop_toBottomOf="@+id/tvAboutText"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/textview_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvVersion"
            app:layout_constraintTop_toBottomOf="@+id/tvDeveloper" app:layout_constraintEnd_toEndOf="@+id/tvDeveloper"
            app:layout_constraintStart_toStartOf="@+id/tvDeveloper" android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/textview_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLaunch"
            app:layout_constraintTop_toBottomOf="@+id/tvVersion" app:layout_constraintStart_toStartOf="@+id/tvVersion"
            app:layout_constraintEnd_toEndOf="@+id/tvVersion" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/textview_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvOwner"
            app:layout_constraintTop_toBottomOf="@+id/tvLaunch" app:layout_constraintEnd_toEndOf="@+id/tvLaunch"
            app:layout_constraintStart_toStartOf="@+id/tvLaunch" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.23"/>

</android.support.constraint.ConstraintLayout>