<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:textStyle="bold"
            android:id="@+id/tvLogo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" tools:text="@string/app_name"/>
    <EditText
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/edittext_username"
            android:ems="10"
            android:id="@+id/etUserName"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLogo"
            app:layout_constraintStart_toStartOf="@+id/tvLogo" app:layout_constraintEnd_toEndOf="@+id/tvLogo"/>
    <EditText
            android:layout_width="358sp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/edittext_password"
            android:ems="10"
            android:id="@+id/etPassword" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etUserName"
            app:layout_constraintEnd_toEndOf="@+id/etUserName" app:layout_constraintStart_toStartOf="@+id/etUserName"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/button_login"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:id="@+id/btLogin"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/link_forgotpass"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:id="@+id/btForgotPassword"
            app:layout_constraintStart_toStartOf="@+id/btLogin"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btLogin" app:layout_constraintEnd_toEndOf="@+id/btLogin"
            app:layout_constraintHorizontal_bias="0.0"/>

    <!-- Solução retirada em https://stackoverflow.com/questions/30413310/android-horizontal-line-with-text-in-middle -->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/btForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/btForgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/btForgotPassword" android:layout_marginTop="48dp"
            app:layout_constraintHorizontal_bias="0.207" android:id="@+id/relativeLayout">

        <TextView
                android:id="@+id/tvDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_or"
                android:textColor="#000000"/>

        <View
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/tvDivider"/>

        <View
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/tvDivider"/>

    </RelativeLayout>

    <Button
            android:text="@string/button_facebook"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:id="@+id/btFacebookLogin"
            android:textColor="#FFFFFF"
            android:background="@color/com_facebook_button_background_color"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="@+id/btForgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/btForgotPassword" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/button_google"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnGoogleLogin" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btFacebookLogin"
            app:layout_constraintEnd_toEndOf="@+id/btFacebookLogin"
            app:layout_constraintStart_toStartOf="@+id/btFacebookLogin" app:layout_constraintHorizontal_bias="0.0"/>

</android.support.constraint.ConstraintLayout>