<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.CustomerActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <ImageView
                android:layout_width="157dp"
                android:layout_height="128dp" app:srcCompat="@drawable/foto"
                android:id="@+id/ivCustomer" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/ivCustomer"
                app:layout_constraintEnd_toEndOf="@+id/ivCustomer" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ivCustomer" android:id="@+id/tilName"
        >

            <EditText
                    style="@style/edit_text"
                    android:id="@+id/etName"
                    android:inputType="text"
                    android:hint="@string/edittext_name"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:layout_constraintStart_toStartOf="@+id/tilName"
                                                       android:layout_marginTop="8dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/tilName"
                                                       app:layout_constraintEnd_toEndOf="@+id/tilName"
                                                       android:layout_marginEnd="8dp"
                                                       app:layout_constraintHorizontal_bias="1.0"
                                                       android:id="@+id/tilEmail">
            <EditText
                    style="@style/edit_text"
                    android:inputType="textEmailAddress"
                    android:id="@+id/etEmail"
                    android:hint="@string/edittext_email"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:layout_constraintEnd_toEndOf="@+id/tilEmail"
                                                       app:layout_constraintStart_toStartOf="@+id/tilEmail"
                                                       android:layout_marginTop="8dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                                                       android:id="@+id/tilPhone">

            <EditText
                    style="@style/edit_text"
                    android:inputType="phone"
                    android:hint="@string/edittext_phone"
                    android:id="@+id/etPhone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:layout_constraintEnd_toEndOf="@+id/tilPhone"
                                                       android:layout_marginTop="8dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/tilPhone"
                                                       app:layout_constraintStart_toStartOf="@+id/tilPhone"
                                                       android:id="@+id/tilBirthDate">

            <EditText
                    style="@style/edit_text"
                    android:inputType="date"
                    android:hint="@string/edittext_birth_date"
                    android:id="@+id/etBirthDate"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:layout_constraintEnd_toEndOf="@+id/tilBirthDate"
                                                       app:layout_constraintStart_toStartOf="@+id/tilBirthDate"
                                                       android:layout_marginTop="8dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/tilBirthDate"
                                                       android:id="@+id/tilPassword">

            <EditText
                    style="@style/edit_text"
                    android:inputType="textPassword"
                    android:hint="@string/edittext_password"
                    android:id="@+id/etPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:layout_constraintStart_toStartOf="@+id/tilPassword"
                                                       app:layout_constraintEnd_toEndOf="@+id/tilPassword"
                                                       android:layout_marginTop="8dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                                                       android:id="@+id/tilPasswordConfirm">
            <EditText
                    style="@style/edit_text"
                    android:inputType="textPassword"
                    android:hint="@string/edittext_password_confirmation"
                    android:id="@+id/etPasswordConfirm"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:text="@string/button_register"
                style="@style/button_login"
                android:id="@+id/btRegister"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tilPasswordConfirm"
                app:layout_constraintStart_toStartOf="@+id/tilPasswordConfirm"
                app:layout_constraintEnd_toEndOf="@+id/tilPasswordConfirm"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>